fix non covered spaces in modal mode for mobiles

--- a/src/app/modules/header/header.component.scss
+++ b/src/app/modules/header/header.component.scss
@@ -151,7 +151,7 @@
   }
 
   .modal-shadow {
-    position: absolute;
+    position: fixed;
     background-color: rgba($color: #000000, $alpha: 0.7);
     height: 100%;
     width: 100%;
